tests/errors/10_type_mismatch_operation.f
      PROGRAM TYPE_MISMATCH_OP
      INTEGER A
      A = 1
      IF (A .EQ. .TRUE.) CONTINUE
      END
